Can not bake tweaked NLA #48397

Closed
opened 2016-05-10 18:27:29 +02:00 by Cenek Strichel · 6 comments

System Information
W10 64b

Blender Version
2.77a

Short description of error
I can not bake tweaked NLA clips

Exact steps for others to reproduce the error

  1. open untitled.blend
  2. select Cube and Object > Animation Bake
  3. you will get ReadOnly error

I don`t know if it is bug or limitation, but it would be fine if I can bake to with tweaked NLA clip

**System Information** W10 64b **Blender Version** 2.77a **Short description of error** I can not bake tweaked NLA clips **Exact steps for others to reproduce the error** 1) open [untitled.blend](https://archive.blender.org/developer/F310017/untitled.blend) 2) select Cube and Object > Animation Bake 3) you will get ReadOnly error I don`t know if it is bug or limitation, but it would be fine if I can bake to with tweaked NLA clip
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

It looks like the script needs to be modified to take into account that it first needs to exit tweakmode before trying to change the action or anything else. Nothing is allowed to change the action field directly when in tweakmode, as doing so will actually leave Blender in a semi-corrupted state.

It looks like the script needs to be modified to take into account that it first needs to exit tweakmode before trying to change the action or anything else. Nothing is allowed to change the action field directly when in tweakmode, as doing so will actually leave Blender in a semi-corrupted state.

This issue was referenced by f283aa61c5

This issue was referenced by f283aa61c5a5f7b0ff9869dc32519806237f8965

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48397
No description provided.